--- a/style.css
+++ b/style.css
@@ -32,21 +32,27 @@ body{
 
 
 @-webkit-keyframes blink {
-   50% { border-color: #ff0000; }
+   0% { opacity: 1; border-color: #ff0000; border-style:solid;}
+   50% { opacity: 0; border-color: #ff0000; border-style:solid;}
+   100% { opacity: 1; border-color: #ff0000; border-style:solid;}
 }
 @-moz-keyframes blink {
-   50% { border-color: #ff0000; }
+  0% { opacity: 1; border-color: #ff0000; border-style:solid;}
+  50% { opacity: 0; border-color: #ff0000; border-style:solid;}
+  100% { opacity: 1; border-color: #ff0000; border-style:solid;}
 }
 @keyframes blink {
-   50% { border-color: #ff0000; }
+  0% { opacity: 1; border-color: #ff0000; border-style:solid;}
+  50% { opacity: 0; border-color: #ff0000; border-style:solid;}
+  100% { opacity: 1; border-color: #ff0000; border-style:solid;}
 }
 
 .blink{
   border-style:solid;
   border-color: #ff0000;
-  -webkit-animation: blink .5s step-end infinite alternate;
-  -moz-animation: blink .5s step-end infinite alternate;
-  animation: blink .5s step-end infinite alternate;
+  -webkit-animation: blink .5s step-end 20 alternate;
+  -moz-animation: blink .5s step-end 20 alternate;
+  animation: blink .5s step-end 20 alternate;
 
 }
 
