Updated css for control.html

--- a/style.css
+++ b/style.css
@@ -186,6 +186,50 @@ header a:hover{
 #chat_zone {
   text-align:center;
 }
+
+#btnReset{
+  height:38px;
+  background:#e8491d;
+  border:0;
+  padding-left: 20px;
+  padding-right:20px;
+  color:#ffffff;
+}
+#btnSubmit{
+  height:38px;
+  background:#e8491d;
+  border:0;
+  padding-left: 20px;
+  padding-right:20px;
+  color:#ffffff;
+}
+#btnLocal{
+  height:38px;
+  background:#e8491d;
+  border:0;
+  padding-left: 20px;
+  padding-right:20px;
+  color:#ffffff;
+}
+#btnDist{
+  height:38px;
+  background:#e8491d;
+  border:0;
+  padding-left: 20px;
+  padding-right:20px;
+  color:#ffffff;
+}
+#btnGT{
+  height:38px;
+  background:#e8491d;
+  border:0;
+  padding-left: 20px;
+  padding-right:20px;
+  color:#ffffff;
+
+}
+.buttonHolder{ text-align: center; }
+
 /* Showcase */
 #showcase{
   min-height:400px;
